manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kata-dictionary
  namespace: kata-system
  labels:
    app: kata-dictionary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kata-dictionary
  template:
    metadata:
      labels:
        app: kata-dictionary
    spec:
      automountServiceAccountToken: false
      containers:
        - name: kata-dictionary
          image: ghcr.io/Edwin-0396/kata-dictionary@sha256:8024538590a99301b9d22626f32cdf9d345815ab035cbc7a2e34d6cb07a1f15f
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
